# TimberGame_cpp

./: .gitignore  CMakeLists.txt  LoadResources.cpp  LoadResources.h  MoveableObject.cpp  MoveableObject.h  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  Timber.cpp  Timber.h  main.cpp  scratch.cpp
include/: Game.h  Player.h  ResourceManager.h
src/Entities/: Background.cpp  Background.h  Branch.cpp  Branch.h  Cloud.cpp  Cloud.h  HUD.cpp  HUD.h  Player.cpp  Player.h  Tree.cpp  Tree.h
src/Game/: Game.cpp  Game.h
src/Managers/: ResourceManager.cpp  ResourceManager.h
